fix contrast issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,7 +51,7 @@ footer {
 }
 
 footer a {
-  color: lightblue
+  color: white;
 }
 
 footer a:hover {
